Feat: 송장 목록 상단의 조작버튼 디자인 컴포넌트 개발

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ html {
   word-wrap: break-word;
 }
 body {
-  background: #0e1323;
+  background: transparent;
   -webkit-font-smoothing: antialiased;
 }
 html,
